<resources>
    <string name="app_name">Android App</string>
    <string name="provider_read_permission_label">ProviderReadPermission</string>

    <string name="second_activity_title">This is a different activity</string>

    <string name="btn_listener_from_xml">This button\'s listener was assigned from XML</string>

    <string name="instructions">Start playing by tapping any tile button:</string>

    <string name="action_settings">Settings</string>
    <string name="action_download_image">Download image…</string>
    <string name="action_make_phone_call">Make a phone call…</string>
    <string name="action_go_map">View Map</string>
    <string name="action_toggle_location_notifier">Toggle Location Notifier</string>
    <string name="action_go_storage">Storage</string>
    <string name="action_go_easy_list">Easy List (RecyclerView)</string>
    <string name="action_go_play">Gaming time</string>
    <string name="action_go_list">RecyclerView (list)</string>
    <string name="action_go_to_animations">Animations</string>
    <string name="action_go_notification">Go Notify</string>
    <string name="action_go_pager">Show Pager</string>

    <string name="title_activity_another">AnotherActivity</string>
    <string name="title_activity_storage">StorageActivity</string>

    <string name="storage_activity_title">Storage activity</string>
    <string name="storage_activity_txt_shared_prefs">this text is saved in the shared-prefs</string>
    <string name="storage_activity_txt_sqlite">this text is saved in SQL Lite</string>
    <string name="storage_activity_txt_backendless">this text will be saved in Backendless</string>
    <string name="storage_activity_txt_firebase">this text is synced with Firebase</string>

    <string name="spinner_title">Keep Calm And …</string>
    <string name="title_activity_notifications">NotificationsActivity</string>

    <string name="notification_title">Notification\'s Title</string>
    <string name="notification_text">Notification\'s Text</string>
    <string name="notification_data">Notification\'s Data</string>
    <string name="notification_dispatch_time">Dispatch Time:</string>
    <string name="notification_btn_create">GO!</string>
    <string name="title_activity_animations">AnimationsActivity</string>

    <string name="maps_activity_title">Maps…</string>
    <string name="zero_value">0</string>
    <string name="shrinking_text">shrinking</string>
    <string name="txt_values"><![CDATA[<values>]]></string>
    <string name="fragment_title">a fragment that receives broadcasts from the MainActivity\'s bound service</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_some_activity_with_map">SomeActivityWithMap</string>
    <string name="btn_goto_afeka">Go To Afeka</string>
    <string name="search_address_hint">enter address…</string>
    <string name="search_button_title">search!</string>
    <string name="map_spinner_title">choose an action</string>
    <string name="btn_go_map_action">GO!</string>
    <string name="map_target_description">map target</string>
    <string name="missing_google_maps_error_message">No GoogleMaps installed on this device</string>
    <string name="shrink_text_action">Will shrink…</string>
    <string name="shrinking_title">… shrinking…</string>
    <string name="accelerometer_state_format">Accelerometer sensors state: %s</string>
    <string name="title_activity_google_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="page_fragment_title">Page fragment</string>
    <string name="autocomplete_list_hint">type text here for autocomplete list</string>
    <string name="image_cell_content_description">image from web</string>

</resources>