<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.perrchick.someapplication.NotificationsActivity">

    <fragment android:id="@+id/sensorsFragment"
        android:name="com.perrchick.someapplication.uiexercises.SensorsFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_sensors" />

    <EditText android:id="@+id/txtNotificationTitle"
        android:hint="@string/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/txtNotificationText"
        android:hint="@string/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/notification_dispatch_time"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TimePicker android:id="@+id/dateDispatchTime"
        android:timePickerMode="spinner"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btn_go"
        android:text="@string/notification_btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>